--- a/index.html
+++ b/index.html
@@ -229,10 +229,13 @@ async function exportarGraficosParaPDF() {
 
   doc.save("graficos-TVDE.pdf");
 }
+    <button onclick="exportarGraficosParaPDF()">Exportar Gráficos para PDF</button>
+
 </script>
   </script>
 </body>
 </html>
+
 
 
 
