--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
       });
 
       const resultado = document.getElementById('resultado')?.innerText;
+      const linhas = doc.splitTextToSize(resultado, 170);
       doc.text("📊 Resultados:", 20, y + 6);
-      doc.text(resultado, 20, y + 12);
+      doc.text(linhas, 20, y + 12);
 
       const canvas = document.getElementById('graficoRendimento');
       const imgData = canvas.toDataURL('image/png');
